--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dynamic = ["version", "description"]
 description-file = "README.md"
 
 [project.urls]
-Home = "https://github.com/"
+Home = "https://github.com/MaikelAparicio10/faker_healthcare_system"
 
 [project.requires-extra]
 test = ["pytest", "pytest-cov", "tox"]
